--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Hello World!</title>
-	<script src="main.js"></script>
+	<script src="hello.js"></script>
 </head>
 <body>
 	<h1>Hello World!</h1>
